# postgres-topology-operator

./: Cargo.toml  Dockerfile  build.rs  index.yaml
.github/workflows/: docker-image.yml
charts/postgres-topology-operator/: Chart.yaml  local-deploy.sh  values.yaml
charts/postgres-topology-operator/templates/: crds.yaml  operator.yaml
src/: main.rs  postgres_password.rs
src/helpers/: ini_builder.rs  mod.rs
src/reconcilers/: finalizers.rs  helpers.rs  mod.rs  pg_bouncer.rs  postgres_role.rs  postgres_schema.rs
src/types/: mod.rs  pg_bouncer.rs  pg_bouncer_database.rs  pg_bouncer_user.rs  postgres_admin_connection.rs  postgres_role.rs  postgres_schema.rs
