[package]
name = "postgres-topology-operator"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.86.0", default-features = false, features = ["client", "rustls-tls", "runtime", "derive", "ws"] }
kube-runtime = {version = "0.86.0", default-features = false, features = ["unstable-runtime-stream-control"] }
k8s-openapi = { version = "0.20.0", features = ["v1_25", "schemars"] }
serde = "1"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
anyhow = { version = "1.0", features = ["backtrace", "std"] }
serde_yaml = "0.9"
clap = { version = "4.4.0", features = ["env", "derive"] }
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.10.0"
base64 = "0.21"
hmac = "0.12"
md-5 = "0.10"
rand = "0.8"
sha2 = "0.10"
stringprep = "0.1"
rustls = "0.21.7"
webpki-roots = "0.25.2"
itertools = "0.11.0"
base16ct = { version = "0.2.0", features = ["alloc", "std"] }


[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }